Partial synchronization with classpath/libgcj (nio). JVMPI/XPROF disable on Cygwin